--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ csv = "1.0.0-beta.5"
 xcb = "0.8"
 serde_derive = "1.0"
 serde = "1.0"
+futures = "0.1"
+tokio-core = "0.1"
+
 
 [dependencies.i3ipc]
 version = "0.8.2"
