--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Daniel Bruce <dbruce1126@gmail.com>"]
 chrono = { version = "0.4", features = ["serde"] }
 csv = "1.0.0-beta.5"
 xcb = "0.8"
+xdg = "2.1"
 fs2 = "0.4"
 serde_derive = "1.0"
 serde = "1.0"
