--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,23 @@
+cargo-features = ["edition"]
+
 [package]
 name = "time-tracker"
 version = "0.1.0"
 authors = ["Daniel Bruce <dbruce1126@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
-csv = "1.0.0-beta.5"
+csv = "1.0.2"
 xcb = "0.8"
 xdg = "2.1"
 fs2 = "0.4"
 serde_derive = "1.0"
 serde = "1.0"
 futures = "0.1"
-tokio-core = "0.1"
-tokio-signal = "0.1"
+tokio = "0.1.10"
+tokio-signal = "0.2.5"
+tokio-async-await = "0.1"
 
 
 [dependencies.i3ipc]
