--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,19 @@
-cargo-features = ["edition"]
-
 [package]
 name = "time-tracker"
 version = "0.1.0"
-authors = ["Daniel Bruce <dbruce1126@gmail.com>"]
+authors = ["Daniel Bruce <dbruce1126@gmail.com>", "Evan Cameron <cameron.evan@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 csv = "1.0.2"
-xcb = "0.8"
+xcb = { version = "0.8", features = ["thread"] }
 xdg = "2.1"
 fs2 = "0.4"
 serde_derive = "1.0"
 serde = "1.0"
 futures = "0.1"
-tokio = "0.1.10"
-tokio-signal = "0.2.5"
-tokio-async-await = "0.1"
+tokio = "0.1.18"
+tokio-signal = "0.2.7"
+tokio-i3ipc = { path = "../tokio-i3ipc", version = "0.3.0" }
 
-
-[dependencies.i3ipc]
-version = "0.8.2"
