--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ serde_derive = "1.0"
 serde = "1.0"
 log = "0.4"
 env_logger = "0.6"
-futures = "0.1"
-tokio = "0.1.18"
-tokio-signal = "0.2.7"
-tokio-i3ipc =  "0.5.0" 
+futures-preview = "=0.3.0-alpha.18"
+tokio = { version = "=0.2.0-alpha.2" }
+tokio-net = { version = "=0.2.0-alpha.2", features = ["signal"] }
+tokio-i3ipc = { git = "https://github.com/leshow/tokio-i3ipc" } 
 
